# ShaderPlay

./: CMakeLists.txt  README.md
include/: planeMesh.h  shader.h  shaderController.h  shaderPlay.h  shaderText.h  texture.h  textureLoader.h  timer.h
resources/: basic_shader.frag  basic_shader.vert  main_shader.frag
src/: main.cpp  shader.cpp  shaderController.cpp  shaderPlay.cpp  texture.cpp  textureLoader.cpp
